--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,10 @@
     <title>Default</title>
     <link rel="stylesheet" href="/vendor/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/page.css"/>
-    <script src="/vendor/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="/vendor/bower_components/jquery/dist/jquery.min.js" defer></script>
+    <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="vendor/bower_components/socket.io-client/socket.io.js" defer></script>
+    <script src="/js/app.js" defer></script>
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
