--- a/views/layouts/static.handlebars
+++ b/views/layouts/static.handlebars
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Default</title>
+    <title>{{title_name}}</title>
     <link rel="stylesheet" href="/vendor/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/page.css"/>
+    <link rel="stylesheet" href="/css/static.css"/>
     <script src="/vendor/bower_components/jquery/dist/jquery.min.js" defer></script>
     <script src="/vendor/bower_components/bootstrap/dist/js/bootstrap.min.js" defer></script>
-    <script src="/js/app.js" defer></script>
+    <script src="/js/static.js" defer></script>
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
