Added more functionality
New: themes support, profile page, registry/login reaction fixed, small
fixes

--- a/views/frontpage.handlebars
+++ b/views/frontpage.handlebars
@@ -1,5 +1,5 @@
 {{#if name}}
-
+    <p>Привет! Заходи в игру, у нас весело!</p>
 {{else}}
     <h3>Авторизируйся, чтобы принять участие в викторине</h3>
     <form class="form-horizontal login-form" name="login-form">
