--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,5 @@
-<p>Здесь можно настроить аккаунт и посмотреть статистику</p>
+<h3>Здесь можно настроить аккаунт и посмотреть статистику</h3>
+<p>Ник: {{name}}</p>
+<p>Общий счет: {{score}}</p>
+<p>Дата создания аккаунта: {{created}}</p>
+<p>Почта: {{email}}</p>
