--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -8,7 +8,8 @@
     <script src="/vendor/bower_components/jquery/dist/jquery.min.js" defer></script>
 </head>
 <body>
-<div class="menu">
+
+<div class="menu-wrap">
     <div class="links">
         <a href="/">На главную</a>
     </div>
@@ -37,6 +38,9 @@
     <div class="variants-wrap"></div>
     <div class="answer-wrap">
         <div class="answer">
+            <div class="server-message">
+                <span></span>
+            </div>
             <form>
                 <input autocomplete="off" autofocus placeholder="Ваш ответ...">
                 <button>Ответ</button>
@@ -49,6 +53,41 @@
         </div>
     </div>
 </div>
+<div class="chat-wrap">
+    <div class="message-box">
+        <div class="message">
+            <div class="name">
+                <span>user1</span>
+            </div>
+            <div class="text">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque delectus distinctio, dolor dolorem doloremque, eius fugit iste libero officia perferendis sunt tempore vitae. Cum expedita maxime saepe temporibus ullam.</span>
+            </div>
+        </div>
+        <div class="message">
+            <div class="name">
+                <span>oktava</span>
+            </div>
+            <div class="text">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis in molestias odit pariatur quidem? Eum excepturi explicabo facere libero, nulla officia veniam voluptate. A aliquid dolorem hic in non repellendus.</span>
+            </div>
+        </div>
+        <div class="message">
+            <div class="name">
+                <span>antonio pepperoni</span>
+            </div>
+            <div class="text">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci ducimus error fugiat, ipsa minus odio officia provident qui quo quod ratione voluptas? Amet debitis eius eligendi esse, modi non similique.</span>
+            </div>
+        </div>
+    </div>
+    <div class="input-box">
+        <form>
+            <textarea></textarea>
+            <button>Ответ</button>
+        </form>
+    </div>
+</div>
+
 <script src="vendor/bower_components/socket.io-client/socket.io.js" defer></script>
 <script src="js/game.js" defer></script>
 </body>
