--- a/public/css/game.css
+++ b/public/css/game.css
@@ -6,36 +6,44 @@ html, body{
 }
 
 .game-wrap{
+    width: 70%;
+    float: left;
+    padding: 0 10px;
+}
+.chat-wrap{
+    width: 30%;
+    float: right;
+    padding-right: 10px;
+}
+.menu-wrap{
+    display: block;
     width: 100%;
+    height: 20px;
+    margin: 10px 0 5px 0;
+    padding: 0 10px;
 }
 
-.menu{
-    display: block;
-    width: 80%;
-    height: 20px;
-    margin: 10px auto 5px;
-}
-.menu .links, .menu .user-control{
+
+
+.menu-wrap .links, .menu-wrap .user-control{
     display: inline-block;
     text-align: center;
 }
-.menu .links{
+.menu-wrap .links{
     float: left;
 }
-.menu .user-control{
+.menu-wrap .user-control{
     float: right;
 }
-.menu .user-control a{
+.menu-wrap .user-control a{
     margin-left: 20px;
 }
 
 .question-wrap, .letters-wrap, .variants-wrap, .answer-wrap{
     position: relative;
     background-color: #ddddff;
-    width: 80%;
     height: 150px;
-    margin: 10px auto;
-    border: 1px solid #00b3ee;
+    margin-bottom: 10px;
     padding: 10px;
 }
 
@@ -132,7 +140,15 @@ html, body{
 .answer-wrap .answer{
     width: 100%;
     height: 100%;
-    padding-top: 25px;
+    padding-top: 35px;
+}
+.answer-wrap .answer .server-message{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: 10px;
+    left: 0;
+    color: #c7254e;
 }
 .answer-wrap form{
     width: 305px;
