Message emiter added

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -54,35 +54,10 @@
     </div>
 </div>
 <div class="chat-wrap">
-    <div class="message-box">
-        <div class="message">
-            <div class="name">
-                <span>user1</span>
-            </div>
-            <div class="text">
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque delectus distinctio, dolor dolorem doloremque, eius fugit iste libero officia perferendis sunt tempore vitae. Cum expedita maxime saepe temporibus ullam.</span>
-            </div>
-        </div>
-        <div class="message">
-            <div class="name">
-                <span>oktava</span>
-            </div>
-            <div class="text">
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis in molestias odit pariatur quidem? Eum excepturi explicabo facere libero, nulla officia veniam voluptate. A aliquid dolorem hic in non repellendus.</span>
-            </div>
-        </div>
-        <div class="message">
-            <div class="name">
-                <span>antonio pepperoni</span>
-            </div>
-            <div class="text">
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci ducimus error fugiat, ipsa minus odio officia provident qui quo quod ratione voluptas? Amet debitis eius eligendi esse, modi non similique.</span>
-            </div>
-        </div>
-    </div>
+    <div class="message-box"></div>
     <div class="input-box">
         <form>
-            <textarea></textarea>
+            <textarea maxlength="255"></textarea>
             <button>Ответ</button>
         </form>
     </div>
