--- a/public/css/game.css
+++ b/public/css/game.css
@@ -5,6 +5,8 @@ html, body{
     width: 100%;
 }
 
+
+
 .game-wrap{
     width: 70%;
     float: left;
@@ -170,4 +172,45 @@ html, body{
     position: absolute;
     bottom: 2px;
     left: 2px;
+}
+
+
+
+
+.chat-wrap .message-box{
+    overflow: scroll;
+    display: inline-block;
+    max-height: 515px;
+    height: 515px;
+    width: 100%;
+}
+.chat-wrap .input-box{
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 110px;
+}
+.chat-wrap textarea{
+    top: 0;
+    width: 100%;
+    height: 80px;
+    max-width: 100%;
+    max-height: 80px;
+}
+.chat-wrap .message{
+    background-color: #DBEFFA;
+    margin-bottom: 5px;
+    padding: 0 5px;
+    width: 100%;
+}
+.chat-wrap .me{
+    background-color: #E6D7F4 !important;
+}
+.chat-wrap .name{
+    text-align: center;
+}
+.chat-wrap .name span{
+    width: 100%;
+    font-weight: 600;
+    text-align: center;
 }
