--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -58,7 +58,7 @@
     <div class="input-box">
         <form>
             <textarea maxlength="255"></textarea>
-            <button>Ответ</button>
+            <button>Отправить</button>
         </form>
     </div>
 </div>
