--- a/backend/views/game.handlebars
+++ b/backend/views/game.handlebars
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>{{title_name}}</title>
-    <link rel="stylesheet" href="/vendor/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/game.css"/>
-    <script src="/vendor/bower_components/jquery/dist/jquery.min.js" defer></script>
+    <script src="/vendor/jquery/dist/jquery.min.js" defer></script>
 </head>
 <body>
 
@@ -63,7 +63,7 @@
     </div>
 </div>
 
-<script src="vendor/bower_components/socket.io-client/socket.io.js" defer></script>
+<script src="vendor/socket.io-client/socket.io.js" defer></script>
 <script src="js/game.js" defer></script>
 </body>
 </html>
