--- a/backend/views/layouts/static.handlebars
+++ b/backend/views/layouts/static.handlebars
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/static.css"/>
     <script src="/vendor/jquery/dist/jquery.min.js" defer></script>
     <script src="/vendor/bootstrap/dist/js/bootstrap.min.js" defer></script>
-    <script src="/js/static.js" defer></script>
+    <script src="/js/static/static.js" defer></script>
 </head>
 <body>
 <nav class="navbar navbar-default" role="navigation">
