--- a/backend/views/game.handlebars
+++ b/backend/views/game.handlebars
@@ -64,6 +64,6 @@
 </div>
 
 <script src="vendor/socket.io-client/socket.io.js" defer></script>
-<script src="js/game.js" defer></script>
+<script src="js/game/game.js" defer></script>
 </body>
 </html>
