--- a/backend/views/game/index.html
+++ b/backend/views/game/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="js/game/game_react.js"></script>
+<script src="js/build/game/game_react.js"></script>
 </body>
 </html>
