--- a/backend/views/game.handlebars
+++ b/backend/views/game.handlebars
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="http://www.epicbrands.be/images/services/04_jquery.png" />
     <title>{{title_name}}</title>
     <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/game.css"/>
