--- a/backend/views/game/index.html
+++ b/backend/views/game/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/png" href="https://www.codementor.io/assets/category_icons/reactjs-expert-help.png" />
     <title>Quiz</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <style>
 
     </style>
 </head>
 <body>
 <div id="root"></div>
-<script src="js/build/game/game_react.js"></script>
+    <script src="js/build/game/game_react.js"></script>
 </body>
 </html>
