--- a/frontend/game/components/GameContainer/Hint/styles.styl
+++ b/frontend/game/components/GameContainer/Hint/styles.styl
@@ -1,8 +1,22 @@
-.fadeout-appear {
-  opacity: 0.01;
-}
+.game-wrap .hint
+  background-color: #d0dcf3
+  height: 15%
+  font-size: 3rem
+  text-align:  center
+  letter-spacing: .6rem
+  font-family:Consolas,monaco, monospace;
+  z-index: 5
 
-.fadeout-appear.fadeout-appear-active {
-  opacity: 1;
-  transition: opacity 2000ms ease-in;
-}
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  overflow: hidden
+  box-shadow: 0 0 20px 5px rgba(0,0,0,0.2)
+
+
+@media all and (max-width: 479px)
+  .game-wrap .hint
+    font-size: 2.2rem
+    letter-spacing: .2rem
+    height: 10%
