--- a/frontend/game/components/MenuContainer/style.styl
+++ b/frontend/game/components/MenuContainer/style.styl
@@ -1,2 +1,30 @@
 .menu-container
-  display none
+  position: absolute
+  display: none
+  top: 0
+  bottom: 0
+  width: 290px
+  flex: 1
+  flex-direction: column
+  z-index: 10
+  overflow: hidden
+
+  font-size: 16px
+  background-color: #4f5a6e
+
+.menu-show
+  display: flex
+
+@media all and (max-width: 300px)
+  .menu-container
+    width: 200px
+    font-size: 12px
+
+@media all and (min-width: 1024px)
+  .menu-container
+    width: 420px
+    font-size: 18px
+
+@media all and (min-width: 1200px)
+  .menu-container
+    width: 500px
