--- a/frontend/game/styles.styl
+++ b/frontend/game/styles.styl
@@ -1,1 +1,52 @@
 @import "~normalize-styl"
+
+html
+  overflow-y: hidden
+
+html,body
+  height: 100%
+  width: 100%
+
+#root
+  min-height: 100%
+  height: 100%
+
+
+@media all and (min-width: 1200px)
+  html
+    font-size: 1.1vw
+
+
+@media all and (max-width: 1199px) and (min-width: 1024px)
+  html
+    font-size: 14px
+
+
+@media all and (max-width: 1023px) and (min-width: 768px)
+  html
+    font-size: 12px
+
+
+@media all and (max-width: 767px) and (min-width: 480px)
+  html
+    font-size: 10px
+
+
+@media all and (max-width: 479px) and (min-width: 320px)
+  html
+    font-size: 9px
+
+
+@media all and (max-width: 319px)
+  html
+    font-size: 8px
+
+
+@media all and (max-height: 479px) and (min-width: 1024px)
+  html
+    font-size: 12px
+
+
+@media all and (max-height: 479px) and (max-width: 992px)
+  html
+    font-size: 8px
